<resources>
    <string name="app_name">Track and Lyrics Search</string>
    <string name="action_settings">settings</string>
    <string name="trackname">track name</string>
    <string name="artistname">artistname</string>
    <string name="albumname">albumname</string>

    <string-array name="tracks">
        <item>track 1</item>
        <item>track 2</item>
        <item>track 3</item>
        <item>track 4</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_image">artist image</string>
    <string name="closebuttontext">CLOSE</string>
</resources>
