<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@android:color/transparent"
              android:padding="20dp"
              android:clickable="true">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackname"
        android:id="@+id/textViewTrackName"

        android:gravity="center_vertical|center_horizontal"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/artistname"
        android:id="@+id/textViewArtistName"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"

        android:contentDescription="@string/artist_image"

        android:background="@android:color/darker_gray"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/albumname"
        android:id="@+id/textViewAlbumName"

        android:gravity="center_vertical|center_horizontal"

        android:textSize="20sp"
        android:textColor="@android:color/white"
        />



</LinearLayout>