<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

              android:weightSum="5"
              android:background="@drawable/bgcymballs"
              android:padding="20dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackname"
        android:id="@+id/textViewTrackName"

        android:gravity="center_vertical|center_horizontal"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/artistname"
        android:id="@+id/textViewArtistName"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"

        android:contentDescription="@string/artist_image"

        android:background="@android:color/darker_gray"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/albumname"
        android:id="@+id/textViewAlbumName"

        android:gravity="center_vertical|center_horizontal"

        android:textSize="20sp"
        android:textColor="@android:color/white"
        />


    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/webview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4.5"
             android:layout_marginTop="40dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"></WebView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closebuttontext"
        android:id="@+id/closeButton"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="close"
        android:layout_weight=".5"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>


</LinearLayout>